--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
-<html lang="ja" ng-app>
+<html lang="ja" ng-app ng-csp>
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/angular-csp.css" type="text/css" />
     <link rel="stylesheet" href="css/style.css" type="text/css" />
 </head>
 <body>
